# GhostX

./: .env.example  .env.template  .gitignore  CHANGELOG.md  CNAME  COMMERCIAL_AGREEMENT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  balance.json  coinbase_secure_template.html  coinbase_template.html  coinbase_transaction.html  create_db.py  email_count.json  ghostx.service  gmail-template (2).html  google_template.html  install_service.bat  kraken.html  leaked by gucci 2.txt  log.py  main.py  pyproject.toml  redis_test.py  requirements.txt  run.py  setup.py  start.bat  test.py  token.txt  trezor.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto_assign.yml  ci.yml  python-app.yml
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  RATE_LIMITING.md
migrations/versions/: create_security_tables.py
src/: __init__.py  config.py  main.py  models.py
src/assets/: __init__.py
src/assets/css/: dashboard.css  style.css
src/assets/js/: auth.js  dashboard.js
src/database/: __init__.py
src/models/: __init__.py  campaign.py  email_template.py  registration_attempt.py  security.py  session.py  tracking.py  user.py
src/routes/: __init__.py  admin.py  admin_api.py  api.py  auth.py  main.py
src/tasks/: email_worker.py
src/utils/: __init__.py  decorators.py  email.py  email_sender.py  log_sanitizer.py  rate_limiter.py  security.py  utils.py  validation.py
static/css/: admin.css  dashboard.css  style.css
static/favicon_io/: site.webmanifest
static/js/: admin.js  auth.js  dashboard.js  editor-config.js  main.js  utils.js
static/templates/: coinbase_hold.html  coinbase_secure_template.html  coinbase_template.html  coinbase_transaction.html  coinbase_wallet_template.html  gmail.html
templates/: 404.html  500.html  admin.html  dashboard.html  index.html  login.html  logout.html  register.html
templates/admin/: dashboard.html
tests/: conftest.py  test_auth.py
yahoo source/: balance.json  coinbase_hold.html  coinbase_template.html  coinbase_wallet_template.html  exploit.py  whitelist.json
